tests/baselines/reference/duplicateStringIndexers.errors.txt
==== tests/cases/compiler/duplicateStringIndexers.ts (6 errors) ====
    // it is an error to have duplicate index signatures of the same kind in a type
    
    interface Number {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    }
    
    interface String {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    }
    
    interface Array<T> {
        [x: string]: T;
        [x: string]: T;
        ~~~~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    }
    
    class C {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    }
    
    interface I {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    }
    
    var a: {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    }
    
    